# zephyr-rail

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.org  _typos.toml  agent.sh  b_u585i_iot02a-build.sh  default.nix  flake.nix  ide.sh  init.sh  native_posix_64-build.sh  native_sim-build.sh  nrf5340dk-build.sh  nucleo_f767zi.overlay  prj.conf  stm32h747i_disco_m7-build.sh  west.yml  wio_terminal-build.sh
.github/workflows/: build-docker.yaml  build.yaml  deploy-pwa.yml  landing.html
3d-print.scad/: .gitignore  README.md  ball_base_mount_v1.1.5.stl  ball_base_mount_v1.1.6-unstable.stl  ball_base_mount_v1.1.7-unstable.stl  ball_base_mount_v1.1.7.stl  build.sh  rail.scad  rail_v1.1.0.stl  rail_v1.1.5.stl  ringclamp_v1.1.5.stl  ringclamp_v1.1.6-unstable.stl  ringclamp_v1.1.7-unstable.stl  ringclamp_v1.1.7.stl
3d-print.scad/HiWin-KK5002P/: HIWIN_20231209_173219.txt  HIWIN_20231209_181456.txt  HIWIN_20231210_093125.txt  KK5002P150A1F000_FILE_1.stp
app/: CMakeLists.txt  Kconfig  PWA_README.md  b_u585i_iot02a-build.sh  build_and_flash.sh  build_and_run.sh  esp_wrover_kit-build.sh  flake.west-commands.nix  flash-xiao-ble.sh  mermaid.StateMachine.mmd  mermaid.sh  native_posix_64-build.sh  native_run.build_and_run.sh  native_sim-build.sh  nrf5340dk-build.sh  prj.conf  qemu_x86-build.sh  stm32h747i_disco-build.sh  stm32h7b3i_dk-build.sh  web_interface.html  west.yml  wio_terminal-build.sh
app/boards/: esp_wrover_kit.overlay  native_posix.overlay  native_sim.conf  native_sim.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  raytac_an7002q_db_nrf5340_cpuapp.conf  raytac_an7002q_db_nrf5340_cpuapp.overlay  stm32h747i_disco_stm32h747xx_m7.conf  stm32h7b3i_dk.conf  stm32h7b3i_dk.overlay  wio_terminal.conf  wio_terminal.overlay  xiao_ble.conf  xiao_ble.overlay  xiao_esp32c6_esp32c6_hpcore.conf  xiao_esp32c6_esp32c6_hpcore.overlay  xiao_esp32s3_esp32s3_procpu.conf  xiao_esp32s3_esp32s3_procpu.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
app/boards/shields/gpio-stepper-rail/: generic-shield.yaml
app/boards/shields/gpio_stepper_rail/: Kconfig.defconfig  Kconfig.shield  gpio_stepper_rail.overlay  shield.yml
app/builds/b_u585i_iot02a/: CMakeCache.txt  zephyr_modules.txt
app/builds/b_u585i_iot02a/Kconfig/: Kconfig.dts
app/builds/b_u585i_iot02a/zephyr/: dts.cmake  edt.pickle  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre
app/builds/wio_terminal/: CMakeCache.txt  zephyr_settings.txt
app/builds/wio_terminal/Kconfig/: Kconfig.modules
app/builds/wio_terminal/zephyr/: snippets_generated.cmake  zephyr.dts.d  zephyr.dts.pre
app/drivers/stepper/: Kconfig
app/dts/bindings/stepper/: simple-stepper.yaml
app/src/: BaseGUI.cpp  BaseGUI.h  Controller.cpp  Controller.h  Display.cpp  Display.h  GPIOs.cpp  GPIOs.h  GUI.cpp  GUI.h  Gui.cpp  Gui.h  LoggingGUI.cpp  LoggingGUI.h  Model.cpp  Model.h  Stack.cpp  Stack.h  StateMachine.cpp  StateMachine.h  Stepper.cpp  Stepper.h  StepperWithTarget.cpp  StepperWithTarget.h  View.cpp  View.h  bluetooth.cpp  bluetooth.h  main.cpp  maybe_bluetooth.cpp  maybe_bluetooth.h  pwa_service.cpp  pwa_service.h  shell.cpp  shell.h  sony_remote.cpp  sony_remote.h
app/src/display/: Display.cpp  Display.h
app/src/ir/: IrSony.h
app/src/mvc/: Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h
app/src/state/: Stack.cpp  Stack.h  StateMachine.cpp  StateMachine.h
app/src/stepper/: Stepper.cpp  Stepper.h  StepperWithTarget.cpp  StepperWithTarget.h
app/tests/stack/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/stack/src/: main.cpp
app/tests/state_machine/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/state_machine/src/: fake_stepper_with_target.cpp  main.cpp
app/web_interface/: index.html  script.js  styles.css
app_gui/src/: BaseGUI.h  (+1 more)
app_only_sony_remote/: CMakeLists.txt  prj.conf  west.yml
app_wireless/: CMakeLists.txt  README.md  prj.conf
app_wireless/src/: main.cpp  pwa_service.cpp  pwa_service.h
app_with_display/: prj.conf
boards/: b_u585i_iot02a.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nucleo_f767zi.overlay  wio_terminal.overlay
docker/: Dockerfile  build.sh  devcontainer.json
electronics/: high-level-plan.mmd  sketch.mmd  sketch.wireless.mmd  sketch.with_rs485.mmd
lib/sony_remote/: CMakeLists.txt  README.md
lib/sony_remote/include/sony_remote/: fake_sony_remote.h  sony_remote.h
lib/sony_remote/src/: fake_sony_remote.cpp  sony_remote.cpp
lib/stepper_with_target/: CMakeLists.txt  Kconfig
lib/stepper_with_target/drivers/: CMakeLists.txt  Kconfig
lib/stepper_with_target/drivers/stepper/: README.md
lib/stepper_with_target/dts/bindings/: stepper.yaml
lib/stepper_with_target/dts/bindings/stepper/: simple-stepper.yaml
lib/stepper_with_target/include/stepper_with_target/: GPIOs.h  Stepper.h  StepperWithTarget.h
lib/stepper_with_target/src/: GPIOs.cpp  Stepper.cpp  StepperWithTarget.cpp
nix/: STM32CubeProg.nix  flake.west-commands.nix
poc_only_pwa/: CMakeLists.txt  prj.conf  web_interface.html
poc_only_pwa/src/: main.cpp  pwa_service.cpp  pwa_service.h
poc_only_sony_remote/: CMakeLists.txt  prj.conf
poc_only_sony_remote/src/: main.cpp
poc_only_stepper_with_target/: CMakeLists.txt  DRIVER_BOOTSTRAP.md  Kconfig  QUICK_REFERENCE.md  prj.conf
poc_only_stepper_with_target/boards/: native_sim.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  xiao_ble.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
poc_only_stepper_with_target/drivers/stepper/: CMakeLists.txt  simple_stepper.c
poc_only_stepper_with_target/dts/bindings/stepper/: simple-stepper.yaml
poc_only_stepper_with_target/src/: main.cpp
scripts/: entr-mermaid.sh  init-and-chores.sh  west.sh
slidev/: README.md  pnpm-lock.yaml  slides.md  styles.css
src/: Controller.cpp  Controller.h  Display.cpp  Display.h  GPIOs.cpp  GPIOs.h  GyroWaiter.cpp  GyroWaiter.h  IrSony.cpp  IrSony.h  Model.cpp  Model.h  Stepper.cpp  Stepper.h  StepperWithTarget.h  View.cpp  View.h  main.cpp
(+20 files in other folders)
